--- a/.gitignore
+++ b/.gitignore
@@ -1,86 +1,101 @@
-# docker volumes
-/volumes
+# ==========================================
+# NODE.JS / NPM
+# ==========================================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+*.tgz
+.npm
+.eslintcache
+.node_repl_history
+*.tsbuildinfo
 
-# Byte-compiled / optimized / DLL files
-__pycache__/
+# ==========================================
+# ENVIRONMENT VARIABLES
+# ==========================================
+.env
+.env.local
+.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.docker
 
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-.idea/
-lib/
-lib64/
-parts/
-sdist/
-wheels/
-*.db
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-
-# Flask stuff:
-instance/
-.webassets-cache
+# ==========================================
+# IDE & EDITOR
+# ==========================================
 .vscode/
 .vscode
-# Scrapy stuff:
-.scrapy
+.idea/
+.idea
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+*.code-workspace
+.eslintignore
 
-# Sphinx documentation
-docs/_build/
+# ==========================================
+# OS FILES
+# ==========================================
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# PyBuilder
-target/
+# ==========================================
+# BUILD & DIST
+# ==========================================
+build/
+dist/
+*.log
+logs/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# ==========================================
+# DATABASE
+# ==========================================
+*.db
+*.sqlite
+*.sqlite3
+database/*.db
+database/*.sqlite
+database/*.sqlite3
 
-# celery beat schedule file
-celerybeat-schedule
+# ==========================================
+# UPLOADS & TEMPORARY FILES
+# ==========================================
+uploads/branches/*
+uploads/categories/*
+uploads/items/*
+!uploads/.gitkeep
+!uploads/branches/.gitkeep
+!uploads/categories/.gitkeep
+!uploads/items/.gitkeep
 
-# virtualenv
-.venv/*
-venv/*
+# ==========================================
+# TEST COVERAGE
+# ==========================================
+coverage/
+.coverage
+.nyc_output/
 
-migrations/versions/*.py
-# docker local data
+# ==========================================
+# DOCKER
+# ==========================================
 docker/
+volumes/
 conf/redis/cache/**
 
-# dotenv
-.env
-
-# ignore version
-.env
-
-alembic/versions/*
+# ==========================================
+# MISC
+# ==========================================
+.pem
+*.pem
+api-test.ps1
+api-test-output.txt
